@@ -47,7 +47,7 @@ public class SeatPreemptionService {
             List<Long> unavailableSeatIds = seats.stream()
                     .filter(seat -> !availableSeats.contains(seat))
                     .map(Seat::getId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             return SeatPreemptionResponseDto.failure(
                     UNAVAILABLE_SEAT_MESSAGE,
@@ -56,12 +56,12 @@ public class SeatPreemptionService {
 
         // 3. 전체 좌석 선점
         PreemptionContext context = createPreemptionContext(userId);
-        preemptSeats(availableSeats, context);
+        List<Seat> preemptedSeats = preemptSeats(seats, context);
 
         // 4. 성공 응답 생성
-        List<PreemptedSeatInfo> preemptedSeats = availableSeats.stream()
+        List<PreemptedSeatInfo> preemptedSeatInfos = preemptedSeats.stream()
                 .map(this::convertToPreemptedSeatInfo)
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("🪑좌석 배치 선점 완료! 선점된 좌석 수: {}, 토큰: {}",
                 availableSeats.size(), context.getPreemptionToken());
@@ -69,7 +69,7 @@ public class SeatPreemptionService {
         return SeatPreemptionResponseDto.success(
                 context.getPreemptionToken(),
                 context.getPreemptedUntil(),
-                preemptedSeats,
+                preemptedSeatInfos,
                 String.format("%d개 좌석을 선점했습니다.", availableSeats.size()));
     }
 
@@ -89,10 +89,10 @@ public class SeatPreemptionService {
                 .build();
     }
 
-    private void preemptSeats(List<Seat> availableSeats, PreemptionContext context) {
+    private List<Seat> preemptSeats(List<Seat> seats, PreemptionContext context) {
         Status preemptedStatus = statusProvider.provide(StatusIds.Seat.PREEMPTED);
 
-        for (Seat seat : availableSeats) {
+        for (Seat seat : seats) {
             seat.preempt(
                     context.getPreemptionToken(),
                     context.getPreemptedAt(),
@@ -102,7 +102,7 @@ public class SeatPreemptionService {
             );
         }
 
-        seatRepository.saveAll(availableSeats);
+        return seatRepository.saveAll(seats);
     }
 
     private List<Seat> filterAvailableSeats(List<Seat> seats, Long performanceId) {
